BUGFIX: Clip overflow above menu when scrolling
Actually not clipping at all but overlaying the whole thing with a box-shadow in the same color as the background. Which should result in the same thing.

Re #155

--- a/app/styles/components/_page-menu.scss
+++ b/app/styles/components/_page-menu.scss
@@ -110,15 +110,6 @@ ul.page-menu__lp-jump {
 	}
 }
 
-.page-menu--flat {
-	position: absolute;
-
-	.page-menu__bar {
-		margin: 0;
-		box-shadow: none;
-	}
-}
-
 .breadcrumbs {
 	padding-left: 1rem;
 
